# edgy

./: Cargo.toml  LICENSE  README.md
src/: cli.yml  main.rs
