[package]
name = "edgy"
description = "Apply Sobel edge detection to a given image or images."
license = "MIT"
version = "0.1.1"
authors = ["dangreco <dan.greco@live.com>"]
edition = "2018"
repository = "https://github.com/dangreco/edgy"

[dependencies]
image = "0.21.0"
pbr = "1.0.1"
clap = {version = "2.32", features = ["yaml"]}
